# EventImpactModel

./: .env.example  .gitignore  Makefile  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/analytics/: event_study.py  regimes.py  returns.py  summary.py  volatility.py
backend/app/api/: router.py
backend/app/api/endpoints/: analytics.py  config_ep.py  data.py
backend/app/data_access/: event_loader.py  price_loader.py
backend/app/schemas/: analytics.py  events.py  prices.py
backend/app/services/: analytics_service.py  data_service.py
backend/tests/: conftest.py  test_analytics.py  test_api.py  test_data_access.py
data/events/: bad_sample.csv  cpi_sample.csv  earnings_sample.csv  fomc_sample.csv  nfp_sample.csv
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/charts/: BoxPlotChart.tsx  DistributionChart.tsx  DrawdownChart.tsx  EventReturnChart.tsx  HeatmapChart.tsx  PlotlyChart.tsx  PlotlyClient.tsx  RegimeComparisonChart.tsx  VolComparisonChart.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: Badge.tsx  Card.tsx  EmptyState.tsx  ErrorState.tsx  LoadingSpinner.tsx  (+3 more)
frontend/src/hooks/: useAnalytics.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: AssetComparison.tsx  DataManager.tsx  EventExplorer.tsx  Methodology.tsx  Overview.tsx  RegimeAnalysis.tsx
frontend/src/types/: index.ts
frontend/tests/: App.test.tsx  setup.ts
scripts/: seed_demo_data.py
